--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
+    --base-yellow: #ffbd11;
     --base-red: #F04C34;
     --base-gray: #231F20;
-    --base-font: 'Roboto', sans-serif;
-}
+    --base-font: 'Roboto', sans-serif;}
 
 html,
 body,
@@ -12,5 +12,61 @@ body *{
 
 body{
     border-top: 10px solid var(--base-red);
-    margin: 0px;
-}
+    color: var(--base-gray);
+    font-family: var(--base-font);
+    margin: 0px;}
+
+#rps-content{
+    padding: 4rem 0;}
+
+.wrap{
+    display: block;
+    margin: 0 auto;
+    max-width: 900px;
+    width: 90%;}
+
+h1{
+    text-align: center;
+    color: var(--base-red);
+    font-size: 3rem;
+    font-weight: 700;
+    text-transform: uppercase;}
+
+.controls-contain{
+    margin: 0 auto 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2rem;
+    max-width: 600px;
+    width: 100%;}
+
+.control{
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1rem;
+    background-color: var(--base-gray);
+    border: 3px solid var(--base-yellow);
+    border-radius: 10px;
+    color: var(--base-yellow);
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .2s;}
+    .control:hover{
+        border-color: var(--base-red);
+        color: var(--base-red);}
+    .control i{
+        display: block;
+        width: 100%;
+        font-size: 2.5rem;
+        margin: 0 0 1rem;}
+
+#scoreboard{
+    display: flex;
+    justify-content: center;
+    column-gap: 2rem;}
+    #scoreboard span{
+        font-size: 1.25rem;
+        font-weight: 700;}
