--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     border-top: 10px solid var(--base-red);
     color: var(--base-gray);
     font-family: var(--base-font);
+    line-height: 1.3;
     margin: 0px;}
 
 #rps-content{
@@ -22,18 +23,25 @@ body{
 .wrap{
     display: block;
     margin: 0 auto;
-    max-width: 900px;
+    max-width: 760px;
     width: 90%;}
 
 h1{
+    margin: 1.5rem;
     text-align: center;
     color: var(--base-red);
     font-size: 3rem;
     font-weight: 700;
     text-transform: uppercase;}
 
+p{
+    margin: 1.5rem 0;
+    color: var(--base-gray);
+    font-size: 1.125rem;
+    text-align: center;}
+
 .controls-contain{
-    margin: 0 auto 2rem;
+    margin: 2rem auto 2rem;
     display: flex;
     flex-wrap: wrap;
     column-gap: 2rem;
