--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ p{
     color: var(--base-gray);
     font-size: 1.125rem;
     text-align: center;}
+    p.large{
+        font-size: 1.5rem;}
+
+.bold{
+    font-weight: 700;}
 
 .controls-contain{
     margin: 2rem auto 2rem;
