--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     border-top: 10px solid var(--base-red);
     color: var(--base-gray);
     font-family: var(--base-font);
+    font-size: 1.125rem;
     line-height: 1.3;
     margin: 0px;}
 
@@ -38,7 +39,6 @@ h1{
 p{
     margin: 1.5rem 0;
     color: var(--base-gray);
-    font-size: 1.125rem;
     text-align: center;}
     p.large{
         font-size: 1.5rem;}
@@ -46,13 +46,15 @@ p{
 .bold{
     font-weight: 700;}
 
-.controls-contain{
+.buttons-contain{
     margin: 2rem auto 2rem;
     display: flex;
     flex-wrap: wrap;
     column-gap: 2rem;
     max-width: 600px;
     width: 100%;}
+    .buttons-contain.center{
+        justify-content: center;}
 
 .control{
     flex: 1;
@@ -62,7 +64,7 @@ p{
     padding: 1rem;
     background-color: var(--base-gray);
     border: 3px solid var(--base-yellow);
-    border-radius: 10px;
+    border-radius: 20px;
     color: var(--base-yellow);
     font-size: 1.5rem;
     font-weight: 700;
@@ -86,5 +88,19 @@ p{
     justify-content: center;
     column-gap: 2rem;}
     #scoreboard span{
-        font-size: 1.25rem;
         font-weight: 700;}
+
+#reset-game{
+    display: none;
+    padding: .5rem 1.125rem;
+    background-color: var(--base-red);
+    border: initial;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .2s;}
+    #reset-game:hover{
+        background-color: var(--base-yellow);
+        color: var(--base-gray);}
